--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://i.kym-cdn.com/photos/images/original/000/173/677/1310185912468.jpg" />
+    <!-- <link rel="icon" href="https://i.kym-cdn.com/photos/images/original/000/173/677/1310185912468.jpg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
